Add credit to cat pic

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -172,6 +172,7 @@
 
       <footer class="page-footer">
         <p class="footer-line">Template made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork him on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line"> Cat pic from <a href="https://www.instagram.com/cheese_eggen/">@cheese_eggen</a></p>
       </footer>
 
     </div>
