Updated experience and resume format

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -73,9 +73,16 @@
       <!-- begin Education -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Education and Certification</h2>
+          <h2>Certification and Education</h2>
         </header>
 
+        <h4><ul class="resume-item-list">
+          {% for cert in education.certs %}
+          <li>{{ cert.cert }}</li>
+          {% endfor %}
+        </ul></h4>
+        {% endfor %}
+        
         {% for education in site.data.education %}
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
@@ -90,13 +97,6 @@
           <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
 
-        <h4><ul class="resume-item-list">
-          {% for cert in education.certs %}
-          <li>{{ cert.cert }}</li>
-          {% endfor %}
-        </ul></h4>
-        {% endfor %}
-        
       </section>
       <!-- end Education -->
       {% endif %}
