--- a/_includes/print-social-links.html
+++ b/_includes/print-social-links.html
@@ -27,10 +27,10 @@
   <li><strong>LinkedIn</strong>: {{ site.resume_social_links.resume_linkedin_url }}</li>
   {% endif %}
 
-  <!-- Instagram link
+  <!-- Instagram link -->
   {% if site.resume_social_links.resume_instagram_url %}
   <li><strong>Instagram</strong>: {{ site.resume_social_links.resume_instagram_url }}</li>
-  {% endif %} -->
+  {% endif %}
 
   <!-- Website link -->
   {% if site.resume_social_links.resume_website_url %}
