Create a $background-white

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@ $grid-gutter:     10px !default;
 // Colors
 $white:             #fff;
 $black:             #333;
+$background-white:  #fcfaf6;
 
 // Styles
 $text_color:        $black;
