CSS fix, missing ;

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -36,11 +36,11 @@ body{
 
 ::-moz-selection {
     background: rgba(51,51,51,.8);
-    color: $white
+    color: $white;
     text-shadow: none;
 }
 ::selection {
     background: rgba(51,51,51,.8);
-    color: $white
+    color: $white;
     text-shadow: none;
 }
