--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,7 @@ $grid-gutter:     10px !default;
 // Colors
 $white:             #fff;
 $black:             #333;
-$background-white:  #fcfaf6;
+$background-white:  #fcfaf6; // off white
 $button:            darken($background-white, 20%);
 
 // Styles
