--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -60,7 +60,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ job.positionone }} &bull; {{ job.durationone }}</h4>
-          <p class="resume-item-copy">{{ job.summary }}</p>
+          <p class="resume-item-copy">{{ job.summaryone }}</p>
         </div><!-- end of resume-item -->
         {% endfor %}
 
