--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,6 @@
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="icon" type="image/x-icon" href="favicon.png" />
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/stickers/50/ocean-wave.png">
+  <!-- <a target="_blank" href="https://icons8.com/icon/bidOza8PFeLn/ocean-wave">Ocean Wave</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 </head>
