--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -235,7 +235,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="syota.sasaki@earthsea-wizard.com">Syota Sasaki</a>. Fork on <a href="https://github.com/jglovier/resume-template">GitHub repository</a> made by <a href="http://twitter.com/jglovier">@jglovier</a>.</p>
+        <p class="footer-line">Made by <a href="syota.sasaki@earthsea-wizard.com">Syota Sasaki</a>. Fork on <a href="https://github.com/jglovier">Joel Glovier</a>.</p>
       </footer>
 
     </div>
