add English description

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -56,7 +56,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>職務経歴</h2>
+          <h2>職務経歴 / Career summary</h2>
         </header>
 
         {% for job in site.data.experience %}
@@ -76,7 +76,7 @@
       <!-- begin Education -->
       <section class="content-section">
         <header class="section-header">
-          <h2>学歴</h2>
+          <h2>学歴 / Education</h2>
         </header>
 
         {% for education in site.data.education %}
@@ -125,7 +125,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>スキルシート</h2>
+          <h2>スキルシート / Skill sheet</h2>
         </header>
         {% for skill in site.data.skills %}
         <div class="resume-item">
