--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -143,7 +143,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>取引実績 / Business records</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
