pilot release mebo

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -163,7 +163,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>会話AI / Conversational AI</h2>
         </header>
 
         {% for association in site.data.associations %}
