--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -14,25 +14,27 @@
 
       <header class="page-header">
         <!-- You can turn off the avatar in _config.yml by setting to false -->
-        {% if site.resume_avatar == 'true' %}
-        <img
-          src="images/avatar.jpg"
-          alt="my photo"
-          class="avatar"
-          itemprop="image"
-        />
-        {% endif %}
+        <div class="title-container">
+          {% if site.resume_avatar == 'true' %}
+          <img
+            src="images/avatar.jpg"
+            alt="my photo"
+            class="avatar"
+            itemprop="image"
+          />
+          {% endif %}
+          <div>
+            <!-- Your name is defined in the _config.yml file -->
+            <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
-        <!-- Your name is defined in the _config.yml file -->
-        <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
-
-        <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
-        {% if site.display_header_contact_info == 'true' %}
-        <div class="header-contact-info">
-          <p>{{ site.resume_header_contact_info }}</p>
+            <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
+            {% if site.display_header_contact_info == 'true' %}
+            <div class="header-contact-info">
+              <p>{{ site.resume_header_contact_info }}</p>
+            </div>
+            {% endif %}
+          </div>
         </div>
-        {% endif %}
-
         <div class="title-bar no-print">
           <!-- Your title is also defined in the _config.yml file -->
           <h2 class="header-title" itemprop="jobTitle">
@@ -42,9 +44,15 @@
           <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
           {% include icon-links.html %}
         </div>
+        <br />
 
-        <div class="executive-summary" itemprop="description">
+        <div
+          style="text-align: center"
+          class="executive-summary"
+          itemprop="description"
+        >
           {{ site.resume_header_intro }}
+          <div class="print-only"><br /></div>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
