--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -155,9 +155,9 @@
       <!-- end Recognition -->
       {% endif %}
 
-      {% if site.resume_section_associations %}
+      <!-- {% if site.resume_section_associations %} -->
       <!-- begin Associations -->
-      <section class="content-section">
+      <!-- <section class="content-section">
 
         <header class="section-header">
           <h2>Associations</h2>
@@ -171,9 +171,9 @@
         </div>
         {% endfor %}
 
-      </section>
+      </section> -->
       <!-- end Associations -->
-      {% endif %}
+      <!-- {% endif %} -->
 
       {% if site.resume_section_interests %}
       <!-- begin Interests -->
